--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <p class="allignment" >For examples of patterns, look <a target="_blank" href="https://en.wikipedia.org/wiki/Conway's_Game_of_Life#Examples_of_patterns">here</a>.</p>
     <div class="allignment">
         <button id="startBtn" type="button" class="buttons">Start Life!</button>
-	<button onclick="pausebutton();">Pause</button>
+	<button class="buttons" onclick="pausebutton();">Pause</button>
         <button id="resetBtn" type="button" class="buttons">Reset</button>
     </div>
     <p></p>
